--- a/.github/workflows/update_status_budge.yml
+++ b/.github/workflows/update_status_budge.yml
@@ -30,7 +30,7 @@ jobs:
             --output-path=${{ env.output-folder }}
 
       - name: deploy lighthouse status
-        uses: JamesIves/github-pages-deploy-action@4
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages
           folder: ${{ env.output-folder }}
