--- a/.github/workflows/deploy_storybook.yml
+++ b/.github/workflows/deploy_storybook.yml
@@ -28,7 +28,7 @@ jobs:
           STORYBOOK_BASE: "/${{ steps.repository.outputs.name }}/main"
 
       - name: deploy storybook
-        uses: JamesIves/github-pages-deploy-action@4
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages
           folder: storybook-static
