--- a/.github/workflows/deploy_preview_storybook.yml
+++ b/.github/workflows/deploy_preview_storybook.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}
-      cancel-in-progress: ${{ github.ref != 'refs/heads/main' }}
+      cancel-in-progress: true
 
     steps:
       - uses: actions/checkout@v3
