--- a/.github/workflows/update_status_budge.yml
+++ b/.github/workflows/update_status_budge.yml
@@ -24,7 +24,7 @@ jobs:
       - name: create lightouse budge
         run: |
           npx lighthouse-badges \
-            --urls https://www.napochaan.com \
+            --urls https://napochaan.com \
             --save-report \
             --output-path=${{ env.output-folder }}
 
