:+1: create budoux text component

--- a/.markuplintrc
+++ b/.markuplintrc
@@ -35,6 +35,12 @@
       "as": {
         "element": "input"
       }
+    },
+    {
+      "selector": "Budoux",
+      "as": {
+        "element": "span"
+      }
     }
   ]
 }
