--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-spring/web": "^9.7.1",
     "@vanilla-extract/css": "^1.9.5",
     "@vanilla-extract/css-utils": "^0.1.3",
+    "budoux": "^0.5.0",
     "jotai": "^2.0.3",
     "next": "^13.2.4",
     "react": "^18.2.0",
