--- a/.github/workflows/deploy_preview_storybook.yml
+++ b/.github/workflows/deploy_preview_storybook.yml
@@ -8,6 +8,7 @@ on:
       - "components/**/*.tsx"
       - "components/**/*.stories.tsx"
       - "components/**/*.css.ts"
+      - "public"
 
 jobs:
   deploy-preview:
