--- a/.github/workflows/deploy_storybook.yml
+++ b/.github/workflows/deploy_storybook.yml
@@ -9,6 +9,7 @@ on:
       - "components/**/*.tsx"
       - "components/**/*.stories.tsx"
       - "components/**/*.css.ts"
+      - "public"
 
 jobs:
   deploy:
