--- a/.github/workflows/deploy_preview_storybook.yml
+++ b/.github/workflows/deploy_preview_storybook.yml
@@ -8,7 +8,7 @@ on:
       - "components/**/*.tsx"
       - "components/**/*.stories.tsx"
       - "components/**/*.css.ts"
-      - "public"
+      - "public/**"
 
 jobs:
   deploy-preview:
