--- a/.github/workflows/deploy_storybook.yml
+++ b/.github/workflows/deploy_storybook.yml
@@ -6,10 +6,10 @@ on:
       - main
     paths:
       - ".storybook/**"
-      - "components/**/*.tsx"
-      - "components/**/*.stories.tsx"
-      - "components/**/*.css.ts"
-      - "public/**"
+      - "**/components/**/*.tsx"
+      - "**/components/**/*.stories.tsx"
+      - "**/components/**/*.css.ts"
+      # - "public/**"
 
 jobs:
   deploy:
