--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vanilla-extract/css": "^1.9.5",
     "@vanilla-extract/css-utils": "^0.1.3",
     "budoux": "^0.5.0",
+    "hex-rgb": "^5.0.0",
     "jotai": "^2.0.3",
     "next": "^13.2.4",
     "react": "^18.2.0",
