--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "types": ["vitest/globals"],
     "plugins": [
       {
         "name": "next"
@@ -23,7 +24,7 @@
     "paths": {
       "@theme": ["src/theme/index.ts"],
       "@theme/css": ["src/theme/css.ts"],
-      "@theme/utils": ["src/theme/utils.ts"],
+      "@theme/utils": ["src/theme/utils/index.ts"],
       "@hooks/*": ["src/hooks/*"],
       "@components/*": ["src/components/*"],
       "@utils/*": ["src/utils/*"]
