--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-stately": "^3.21.0"
   },
   "devDependencies": {
+    "@axe-core/react": "^4.6.0",
     "@cloudflare/next-on-pages": "^0.3.0",
     "@markuplint/jsx-parser": "^3.3.0",
     "@markuplint/react-spec": "^3.3.0",
@@ -53,6 +54,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/eslint": "^8.21.1",
+    "@types/jsdom": "^21.1.0",
     "@types/node": "^18.11.18",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.27",
@@ -61,11 +63,13 @@
     "@vanilla-extract/next-plugin": "^2.1.1",
     "@vanilla-extract/vite-plugin": "^3.8.0",
     "@vitejs/plugin-react": "^3.1.0",
+    "@vitest/coverage-c8": "^0.29.3",
     "babel-loader": "^8.3.0",
     "eslint": "^8.35.0",
     "eslint-plugin-storybook": "^0.6.10",
     "eslint-plugin-testing-library": "^5.10.2",
-    "happy-dom": "^8.9.0",
+    "jest-extended": "^3.2.4",
+    "jsdom": "^21.1.1",
     "markuplint": "^3.3.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.4",
@@ -75,6 +79,8 @@
     "vite": "^4.1.4",
     "vite-tsconfig-paths": "^4.0.5",
     "vitest": "^0.29.2",
+    "vitest-axe": "^0.1.0",
+    "vitest-canvas-mock": "^0.2.2",
     "wrangler": "^2.12.2"
   },
   "nextBundleAnalysis": {
