--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,6 @@
       "@utils/*": ["src/utils/*"]
     }
   },
-  "include": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx", "**/*.cjs", "**/*.mjs"],
+  "include": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx", "vitest-setup.ts", "next.config.js", ".eslintrc.cjs"],
   "exclude": ["node_modules"]
 }
