--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@acab/reset.css": "^0.5.3",
     "@react-aria/utils": "^3.15.0",
     "@react-spring/web": "^9.7.1",
+    "@tabler/icons-react": "^2.11.0",
     "@vanilla-extract/css": "^1.9.5",
     "@vanilla-extract/css-utils": "^0.1.3",
     "budoux": "^0.5.0",
