--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@acab/reset.css": "^0.5.3",
+    "@radix-ui/react-scroll-area": "^1.0.3",
     "@react-aria/utils": "^3.15.0",
     "@react-spring/web": "^9.7.1",
     "@tabler/icons-react": "^2.11.0",
