--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "fmt": "npm-run-all -s 'fmt:*'",
     "fmt:eslint": "eslint . --fix",
     "fmt:prettier": "prettier --write .",
-    "storybook": "storybook dev -p 6006 -s public",
-    "build-storybook": "storybook build -s public",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public",
     "test": "vitest --passWithNoTests",
     "type-check": "tsc --noEmit"
   },
@@ -44,15 +44,14 @@
     "@markuplint/react-spec": "^3.3.0",
     "@naporin0624/eslint-config": "^0.7.1",
     "@next/eslint-plugin-next": "^13.2.3",
-    "@storybook/addon-a11y": "^7.0.0-rc.5",
-    "@storybook/addon-actions": "^7.0.0-rc.5",
-    "@storybook/addon-essentials": "^7.0.0-rc.5",
-    "@storybook/addon-interactions": "^7.0.0-rc.5",
-    "@storybook/addon-links": "^7.0.0-rc.5",
-    "@storybook/addon-mdx-gfm": "^7.0.0-rc.5",
-    "@storybook/react": "^7.0.0-rc.5",
-    "@storybook/react-vite": "^7.0.0-rc.5",
-    "@storybook/testing-library": "^0.0.14-next.1",
+    "@storybook/addon-a11y": "^6.5.16",
+    "@storybook/addon-actions": "^6.5.16",
+    "@storybook/addon-essentials": "^6.5.16",
+    "@storybook/addon-interactions": "^6.5.16",
+    "@storybook/addon-links": "^6.5.16",
+    "@storybook/builder-vite": "^0.4.2",
+    "@storybook/react": "^6.5.16",
+    "@storybook/testing-library": "^0.0.13",
     "@svgr/webpack": "^6.5.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
@@ -79,7 +78,6 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.4",
     "rimraf": "^4.3.0",
-    "storybook": "^7.0.0-rc.5",
     "storybook-dark-mode": "^2.0.6",
     "typescript": "^4.9.5",
     "vite": "^4.1.4",
