--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "fmt": "npm-run-all -s 'fmt:*'",
     "fmt:eslint": "eslint . --fix",
     "fmt:prettier": "prettier --write .",
-    "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook",
     "test": "vitest --passWithNoTests",
     "type-check": "tsc --noEmit"
   },
@@ -70,7 +70,7 @@
     "babel-loader": "^8.3.0",
     "eslint": "^8.35.0",
     "eslint-plugin-jest-dom": "^4.0.3",
-    "eslint-plugin-storybook": "^0.6.10",
+    "eslint-plugin-storybook": "^0.6.11",
     "eslint-plugin-testing-library": "^5.10.2",
     "jest-extended": "^3.2.4",
     "jsdom": "^21.1.1",
@@ -78,7 +78,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.4",
     "rimraf": "^4.3.0",
-    "storybook-dark-mode": "^2.0.6",
+    "storybook-dark-mode": "^2.1.1",
     "typescript": "^4.9.5",
     "vite": "^4.1.4",
     "vite-tsconfig-paths": "^4.0.5",
