--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "rimraf": "^4.3.0",
     "storybook-dark-mode": "^2.1.1",
     "typescript": "^4.9.5",
+    "vercel": "^28.18.0",
     "vite": "^4.1.4",
     "vite-tsconfig-paths": "^4.0.5",
     "vitest": "^0.29.2",
@@ -91,5 +92,10 @@
     "budget": 358400,
     "budgetPercentIncreaseRed": 20,
     "showDetails": true
+  },
+  "overrides": {
+    "trim": "0.0.3",
+    "trim-newlines": "3.0.1",
+    "glob-parent": "5.1.2"
   }
 }
