--- a/package.json
+++ b/package.json
@@ -22,20 +22,16 @@
   "dependencies": {
     "@acab/reset.css": "^0.5.3",
     "@radix-ui/react-scroll-area": "^1.0.3",
-    "@react-aria/utils": "^3.15.0",
     "@react-spring/web": "^9.7.1",
     "@tabler/icons-react": "^2.11.0",
     "@vanilla-extract/css": "^1.9.5",
     "@vanilla-extract/css-utils": "^0.1.3",
     "budoux": "^0.5.0",
     "hex-rgb": "^5.0.0",
-    "jotai": "^2.0.3",
     "next": "^13.2.4",
+    "next-themes": "^0.2.1",
     "react": "^18.2.0",
-    "react-aria": "^3.23.1",
-    "react-dom": "^18.2.0",
-    "react-merge-refs": "^2.0.1",
-    "react-stately": "^3.21.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@axe-core/react": "^4.6.0",
