--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@acab/reset.css": "^0.5.3",
     "@radix-ui/react-scroll-area": "^1.0.3",
+    "@radix-ui/react-toggle-group": "^1.0.3",
     "@react-spring/web": "^9.7.1",
     "@tabler/icons-react": "^2.11.0",
     "@vanilla-extract/css": "^1.9.5",
