--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "test": "vitest --passWithNoTests",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "find-deadcode": "ts-prune | grep -v 'used in module'"
   },
   "dependencies": {
     "@acab/reset.css": "^0.5.3",
@@ -76,6 +77,7 @@
     "prettier": "^2.8.4",
     "rimraf": "^4.3.0",
     "storybook-dark-mode": "^2.1.1",
+    "ts-prune": "^0.10.3",
     "typescript": "^4.9.5",
     "vercel": "^28.18.0",
     "vite": "^4.1.4",
