--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,10 +27,9 @@
       "@theme/utils": ["src/theme/utils/index.ts"],
       "@hooks/*": ["src/hooks/*"],
       "@components/*": ["src/components/*"],
-      "@utils/*": ["src/utils/*"],
-      "@atoms/*": ["src/atoms/*"]
+      "@utils/*": ["src/utils/*"]
     }
   },
-  "include": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx", "vitest-setup.ts", "next.config.js", ".eslintrc.cjs"],
-  "exclude": ["node_modules"]
+  "include": ["**/*.ts", "**/*.tsx", "vitest-setup.ts", "next.config.js", ".eslintrc.cjs"],
+  "exclude": ["node_modules", "dist", "coverage", "out", "build", "public", "storybook-static", ".next"]
 }
