--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   },
   "dependencies": {
     "@acab/reset.css": "^0.5.3",
+    "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-scroll-area": "^1.0.3",
+    "@radix-ui/react-separator": "^1.0.2",
     "@radix-ui/react-toggle-group": "^1.0.3",
     "@react-spring/web": "^9.7.1",
     "@tabler/icons-react": "^2.11.0",
@@ -33,7 +35,8 @@
     "next": "^13.2.4",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "use-media": "^1.4.0"
   },
   "devDependencies": {
     "@axe-core/react": "^4.6.0",
