--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "@radix-ui/react-toggle-group": "^1.0.3",
     "@react-spring/web": "^9.7.1",
     "@tabler/icons-react": "^2.11.0",
-    "@vanilla-extract/css": "^1.9.5",
+    "@vanilla-extract/css": "^1.11.0",
     "@vanilla-extract/css-utils": "^0.1.3",
     "budoux": "^0.5.0",
     "hex-rgb": "^5.0.0",
-    "next": "^13.2.4",
+    "next": "13.3.1-canary.6",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -64,12 +64,13 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/testing-library__jest-dom": "^5.14.5",
-    "@vanilla-extract/next-plugin": "^2.1.1",
+    "@vanilla-extract/next-plugin": "^2.1.2",
     "@vanilla-extract/vite-plugin": "^3.8.0",
     "@vitejs/plugin-react": "^3.1.0",
     "@vitest/coverage-c8": "^0.29.3",
     "babel-loader": "^8.3.0",
     "eslint": "^8.35.0",
+    "eslint-config-next": "^13.3.0",
     "eslint-plugin-jest-dom": "^4.0.3",
     "eslint-plugin-storybook": "^0.6.11",
     "eslint-plugin-testing-library": "^5.10.2",
