--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "@radix-ui/react-scroll-area": "^1.0.3",
     "@radix-ui/react-separator": "^1.0.2",
     "@radix-ui/react-toggle-group": "^1.0.3",
-    "@react-spring/web": "^9.7.1",
+    "@react-spring/web": "^9.7.3",
     "@tabler/icons-react": "^2.11.0",
-    "@vanilla-extract/css": "^1.11.0",
+    "@vanilla-extract/css": "^1.12.0",
     "@vanilla-extract/css-utils": "^0.1.3",
     "budoux": "^0.5.0",
     "hex-rgb": "^5.0.0",
-    "next": "13.3.1-canary.6",
+    "next": "^13.4.12",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -40,7 +40,7 @@
   },
   "devDependencies": {
     "@axe-core/react": "^4.6.0",
-    "@cloudflare/next-on-pages": "^1.0.0",
+    "@cloudflare/next-on-pages": "^1.3.1",
     "@markuplint/jsx-parser": "^3.3.0",
     "@markuplint/react-spec": "^3.3.0",
     "@naporin0624/eslint-config": "^0.7.1",
@@ -64,7 +64,7 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/testing-library__jest-dom": "^5.14.5",
-    "@vanilla-extract/next-plugin": "^2.1.2",
+    "@vanilla-extract/next-plugin": "^2.1.3",
     "@vanilla-extract/vite-plugin": "^3.8.0",
     "@vitejs/plugin-react": "^3.1.0",
     "@vitest/coverage-c8": "^0.29.3",
