--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-merge-refs": "^2.0.2",
     "use-media": "^1.4.0"
   },
   "devDependencies": {
