--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@cloudflare/next-on-pages": "^1.3.1",
     "@markuplint/jsx-parser": "^3.3.0",
     "@markuplint/react-spec": "^3.3.0",
-    "@naporin0624/eslint-config": "^0.7.1",
+    "@naporin0624/eslint-config": "^0.13.0",
     "@next/eslint-plugin-next": "^13.2.3",
     "@storybook/addon-a11y": "^6.5.16",
     "@storybook/addon-actions": "^6.5.16",
@@ -70,7 +70,7 @@
     "@vitejs/plugin-react": "^3.1.0",
     "@vitest/coverage-c8": "^0.29.3",
     "babel-loader": "^8.3.0",
-    "eslint": "^8.35.0",
+    "eslint": "^8.48.0",
     "eslint-config-next": "^13.3.0",
     "eslint-plugin-jest-dom": "^4.0.3",
     "eslint-plugin-storybook": "^0.6.11",
@@ -79,7 +79,7 @@
     "jsdom": "^21.1.1",
     "markuplint": "^3.3.1",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.4",
+    "prettier": "^3.0.2",
     "rimraf": "^4.3.0",
     "storybook-dark-mode": "^2.1.1",
     "ts-prune": "^0.10.3",
@@ -90,7 +90,7 @@
     "vitest": "^0.29.8",
     "vitest-axe": "^0.1.0",
     "vitest-canvas-mock": "^0.2.2",
-    "wrangler": "^2.12.2"
+    "wrangler": "^3.6.0"
   },
   "nextBundleAnalysis": {
     "budget": 358400,
@@ -99,6 +99,8 @@
   },
   "overrides": {
     "trim": "1.0.1",
-    "glob-parent": "6.0.2"
+    "trim-newlines": "3.0.1",
+    "glob-parent": "6.0.2",
+    "word-wrap": "1.2.4"
   }
 }
