--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "fmt": "npm-run-all -s 'fmt:*'",
     "fmt:eslint": "eslint . --fix",
     "fmt:prettier": "prettier --write .",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
     "test": "vitest --passWithNoTests",
     "type-check": "tsc --noEmit",
     "find-deadcode": "ts-prune | grep -v 'used in module'"
@@ -41,19 +41,19 @@
   },
   "devDependencies": {
     "@axe-core/react": "^4.6.0",
-    "@cloudflare/next-on-pages": "^1.6.0",
     "@markuplint/jsx-parser": "^3.3.0",
     "@markuplint/react-spec": "^3.3.0",
     "@naporin0624/eslint-config": "^0.14.0",
     "@next/eslint-plugin-next": "^13.2.3",
-    "@storybook/addon-a11y": "^6.5.16",
-    "@storybook/addon-actions": "^6.5.16",
-    "@storybook/addon-essentials": "^6.5.16",
-    "@storybook/addon-interactions": "^6.5.16",
-    "@storybook/addon-links": "^6.5.16",
-    "@storybook/builder-vite": "^0.4.2",
-    "@storybook/react": "^6.5.16",
-    "@storybook/testing-library": "^0.0.13",
+    "@storybook/addon-a11y": "^7.5.2",
+    "@storybook/addon-actions": "^7.5.2",
+    "@storybook/addon-docs": "^7.5.2",
+    "@storybook/addon-essentials": "^7.5.2",
+    "@storybook/addon-interactions": "^7.5.2",
+    "@storybook/addon-links": "^7.5.2",
+    "@storybook/react": "^7.5.2",
+    "@storybook/react-vite": "^7.5.2",
+    "@storybook/testing-library": "^0.2.2",
     "@svgr/webpack": "^6.5.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
@@ -73,7 +73,7 @@
     "eslint": "^8.50.0",
     "eslint-config-next": "^13.3.0",
     "eslint-plugin-jest-dom": "^4.0.3",
-    "eslint-plugin-storybook": "^0.6.11",
+    "eslint-plugin-storybook": "^0.6.15",
     "eslint-plugin-testing-library": "^5.10.2",
     "jest-extended": "^3.2.4",
     "jsdom": "^21.1.1",
@@ -81,16 +81,15 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.3",
     "rimraf": "^4.3.0",
-    "storybook-dark-mode": "^2.1.1",
+    "storybook": "^7.5.2",
+    "storybook-dark-mode": "^3.0.1",
     "ts-prune": "^0.10.3",
     "typescript": "^5.2.2",
-    "vercel": "^28.20.0",
     "vite": "^4.4.7",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.29.8",
     "vitest-axe": "^0.1.0",
-    "vitest-canvas-mock": "^0.2.2",
-    "wrangler": "^3.6.0"
+    "vitest-canvas-mock": "^0.2.2"
   },
   "nextBundleAnalysis": {
     "budget": 358400,
@@ -102,5 +101,8 @@
     "trim-newlines": "3.0.1",
     "glob-parent": "6.0.2",
     "word-wrap": "1.2.4"
+  },
+  "volta": {
+    "node": "18.18.2"
   }
 }
