--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,14 @@
       "@utils/*": ["src/utils/*"]
     }
   },
-  "include": ["**/*.ts", "**/*.tsx", "vitest-setup.ts", "next.config.js", ".eslintrc.cjs", ".next/types/**/*.ts"],
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    "vitest-setup.ts",
+    "next.config.js",
+    ".eslintrc.cjs",
+    ".next/types/**/*.ts",
+    "postcss.config.cjs"
+  ],
   "exclude": ["node_modules", "dist", "coverage", "out", "build", "public", "storybook-static", ".next"]
 }
