--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@axe-core/react": "^4.6.0",
     "@markuplint/jsx-parser": "^3.3.0",
     "@markuplint/react-spec": "^3.3.0",
-    "@naporin0624/eslint-config": "^0.14.0",
+    "@naporin0624/eslint-config": "^0.14.2",
     "@next/eslint-plugin-next": "^14.0.0",
     "@storybook/addon-a11y": "^7.5.2",
     "@storybook/addon-actions": "^7.5.2",
@@ -55,7 +55,7 @@
     "@storybook/react-vite": "^7.5.2",
     "@storybook/testing-library": "^0.2.2",
     "@svgr/webpack": "^8.0.0",
-    "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/eslint": "^8.21.1",
@@ -64,11 +64,11 @@
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
-    "@types/testing-library__jest-dom": "^5.14.5",
     "@vanilla-extract/next-plugin": "^2.1.3",
     "@vanilla-extract/vite-plugin": "^3.8.0",
     "@vitejs/plugin-react": "^4.0.0",
     "@vitest/coverage-c8": "^0.29.3",
+    "autoprefixer": "^10.4.19",
     "babel-loader": "^9.0.0",
     "eslint": "^8.50.0",
     "eslint-config-next": "^14.0.0",
@@ -79,6 +79,11 @@
     "jsdom": "^23.0.0",
     "markuplint": "^3.3.1",
     "npm-run-all": "^4.1.5",
+    "postcss-dark-theme-class": "^1.2.1",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-gap-properties": "^5.0.1",
+    "postcss-media-minmax": "^5.0.0",
+    "postcss-preset-env": "^9.5.2",
     "prettier": "^3.0.3",
     "rimraf": "^5.0.0",
     "storybook": "^7.5.2",
