--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "scripts": {
     "dev": "next dev",
-    "wrangler:dev": "next-on-pages && wrangler pages dev --port 3000 .vercel/output/static",
+    "wrangler:dev": "npx @cloudflare/next-on-pages && wrangler pages dev --port 3000 .vercel/output/static --compatibility-flags=\"nodejs_compat\" --compatibility-date=2024-03-30",
     "prebuild": "rimraf dist && rimraf .next",
     "build": "next build",
     "start": "next start",
@@ -39,8 +39,9 @@
   },
   "devDependencies": {
     "@axe-core/react": "^4.6.0",
-    "@markuplint/jsx-parser": "^3.3.0",
-    "@markuplint/react-spec": "^3.3.0",
+    "@cloudflare/next-on-pages": "^1.11.0",
+    "@markuplint/jsx-parser": "^4.4.0",
+    "@markuplint/react-spec": "^4.2.0",
     "@naporin0624/eslint-config": "^0.14.2",
     "@next/eslint-plugin-next": "^14.0.0",
     "@svgr/webpack": "^8.0.0",
@@ -61,10 +62,11 @@
     "eslint": "^8.50.0",
     "eslint-config-next": "^14.0.0",
     "eslint-plugin-jest-dom": "^5.0.0",
-    "eslint-plugin-testing-library": "^6.0.0",
+    "eslint-plugin-next-on-pages": "^1.11.0",
+    "eslint-plugin-testing-library": "^6.2.0",
     "jest-extended": "^4.0.0",
     "jsdom": "^23.0.0",
-    "markuplint": "^3.3.1",
+    "markuplint": "^4.4.0",
     "npm-run-all": "^4.1.5",
     "postcss-dark-theme-class": "^1.2.1",
     "postcss-flexbugs-fixes": "^5.0.2",
@@ -79,7 +81,8 @@
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^1.0.0",
     "vitest-axe": "^0.1.0",
-    "vitest-canvas-mock": "^0.2.2"
+    "vitest-canvas-mock": "^0.2.2",
+    "wrangler": "^3.41.0"
   },
   "nextBundleAnalysis": {
     "budget": 358400,
