--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "scripts": {
     "dev": "next dev",
-    "wrangler:dev": "next-on-pages && wrangler pages dev --port 3000 .vercel/output/static",
+    "wrangler:dev": "npx @cloudflare/next-on-pages && wrangler pages dev --port 3000 .vercel/output/static --compatibility-flags=\"nodejs_compat\" --compatibility-date=2024-03-30",
     "prebuild": "rimraf dist && rimraf .next",
     "build": "next build",
     "start": "next start",
@@ -14,8 +14,6 @@
     "fmt": "npm-run-all -s 'fmt:*'",
     "fmt:eslint": "eslint . --fix",
     "fmt:prettier": "prettier --write .",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
     "test": "vitest --passWithNoTests",
     "type-check": "tsc --noEmit",
     "find-deadcode": "ts-prune | grep -v 'used in module'"
@@ -41,23 +39,14 @@
   },
   "devDependencies": {
     "@axe-core/react": "^4.6.0",
-    "@markuplint/jsx-parser": "^3.3.0",
-    "@markuplint/react-spec": "^3.3.0",
+    "@cloudflare/next-on-pages": "^1.11.0",
+    "@markuplint/jsx-parser": "^4.4.0",
+    "@markuplint/react-spec": "^4.2.0",
     "@naporin0624/eslint-config": "^0.14.2",
     "@next/eslint-plugin-next": "^14.0.0",
-    "@storybook/addon-a11y": "^7.5.2",
-    "@storybook/addon-actions": "^7.5.2",
-    "@storybook/addon-docs": "^7.5.2",
-    "@storybook/addon-essentials": "^7.5.2",
-    "@storybook/addon-interactions": "^7.5.2",
-    "@storybook/addon-links": "^7.5.2",
-    "@storybook/react": "^7.5.2",
-    "@storybook/react-vite": "^7.5.2",
-    "@storybook/testing-library": "^0.2.2",
     "@svgr/webpack": "^8.0.0",
     "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.4.3",
+    "@testing-library/react": "^14.2.2",
     "@types/eslint": "^8.21.1",
     "@types/jsdom": "^21.1.0",
     "@types/node": "^20.0.0",
@@ -73,11 +62,11 @@
     "eslint": "^8.50.0",
     "eslint-config-next": "^14.0.0",
     "eslint-plugin-jest-dom": "^5.0.0",
-    "eslint-plugin-storybook": "^0.6.15",
-    "eslint-plugin-testing-library": "^6.0.0",
+    "eslint-plugin-next-on-pages": "^1.11.0",
+    "eslint-plugin-testing-library": "^6.2.0",
     "jest-extended": "^4.0.0",
     "jsdom": "^23.0.0",
-    "markuplint": "^3.3.1",
+    "markuplint": "^4.4.0",
     "npm-run-all": "^4.1.5",
     "postcss-dark-theme-class": "^1.2.1",
     "postcss-flexbugs-fixes": "^5.0.2",
@@ -86,15 +75,14 @@
     "postcss-preset-env": "^9.5.2",
     "prettier": "^3.0.3",
     "rimraf": "^5.0.0",
-    "storybook": "^7.5.2",
-    "storybook-dark-mode": "^3.0.1",
     "ts-prune": "^0.10.3",
     "typescript": "^5.2.2",
     "vite": "^5.0.0",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^1.0.0",
     "vitest-axe": "^0.1.0",
-    "vitest-canvas-mock": "^0.2.2"
+    "vitest-canvas-mock": "^0.2.2",
+    "wrangler": "^3.41.0"
   },
   "nextBundleAnalysis": {
     "budget": 358400,
