--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "find-deadcode": "ts-prune | grep -v 'used in module'"
   },
   "dependencies": {
-    "@acab/reset.css": "^0.5.3",
+    "@acab/reset.css": "^0.8.0",
+    "@cloudflare/next-on-pages": "^1.11.0",
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-scroll-area": "^1.0.3",
     "@radix-ui/react-separator": "^1.0.2",
@@ -30,7 +31,7 @@
     "@vanilla-extract/css-utils": "^0.1.3",
     "budoux": "^0.5.0",
     "hex-rgb": "^5.0.0",
-    "next": "^14.0.4",
+    "next": "^14.1.4",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -39,7 +40,7 @@
   },
   "devDependencies": {
     "@axe-core/react": "^4.6.0",
-    "@cloudflare/next-on-pages": "^1.11.0",
+    "@cloudflare/workers-types": "^4.20240329.0",
     "@markuplint/jsx-parser": "^4.4.0",
     "@markuplint/react-spec": "^4.2.0",
     "@naporin0624/eslint-config": "^0.14.2",
@@ -49,17 +50,17 @@
     "@testing-library/react": "^14.2.2",
     "@types/eslint": "^8.21.1",
     "@types/jsdom": "^21.1.0",
-    "@types/node": "^20.0.0",
+    "@types/node": "^20.12.2",
     "@types/prettier": "^2.7.2",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
+    "@types/react": "^18.2.73",
+    "@types/react-dom": "^18.2.23",
     "@vanilla-extract/next-plugin": "^2.1.3",
     "@vanilla-extract/vite-plugin": "^3.8.0",
     "@vitejs/plugin-react": "^4.0.0",
     "@vitest/coverage-c8": "^0.29.3",
     "autoprefixer": "^10.4.19",
     "babel-loader": "^9.0.0",
-    "eslint": "^8.50.0",
+    "eslint": "^8.57.0",
     "eslint-config-next": "^14.0.0",
     "eslint-plugin-jest-dom": "^5.0.0",
     "eslint-plugin-next-on-pages": "^1.11.0",
@@ -73,7 +74,7 @@
     "postcss-gap-properties": "^5.0.1",
     "postcss-media-minmax": "^5.0.0",
     "postcss-preset-env": "^9.5.2",
-    "prettier": "^3.0.3",
+    "prettier": "^3.2.5",
     "rimraf": "^5.0.0",
     "ts-prune": "^0.10.3",
     "typescript": "^5.2.2",
@@ -93,7 +94,8 @@
     "trim": "1.0.1",
     "trim-newlines": "3.0.1",
     "glob-parent": "6.0.2",
-    "word-wrap": "1.2.4"
+    "word-wrap": "1.2.4",
+    "@typescript-eslint/typescript-estree": "7.4.0"
   },
   "volta": {
     "node": "20.10.0"
