--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
     ],
     "baseUrl": ".",
     "paths": {
+      "@assets/*": ["src/assets/*"],
       "@theme": ["src/theme/index.ts"],
       "@theme/*": ["src/theme/*"],
       "@hooks/*": ["src/hooks/*"],
