--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@vanilla-extract/css": "^1.12.0",
     "@vanilla-extract/css-utils": "^0.1.3",
     "budoux": "^0.5.0",
+    "dayjs": "^1.11.11",
+    "fast-xml-parser": "^4.4.0",
     "hex-rgb": "^5.0.0",
     "next": "^14.1.4",
     "next-themes": "^0.2.1",
