--- a/.github/workflows/check_code.yml
+++ b/.github/workflows/check_code.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ./.github/workflows/modules/setup-node
 
-      - run: npm run lint
+      - run: bun run lint
 
   test:
     runs-on: ubuntu-latest
@@ -29,4 +29,28 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ./.github/workflows/modules/setup-node
 
-      - run: npm run test
+      - run: bun run test
+
+  type-check:
+    runs-on: ubuntu-latest
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}-type-check
+      cancel-in-progress: true
+
+    steps:
+      - uses: actions/checkout@v4
+      - uses: ./.github/workflows/modules/setup-node
+
+      - run: bun run type-check
+
+  next-on-pages:
+    runs-on: ubuntu-latest
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}-next-on-pages
+      cancel-in-progress: true
+
+    steps:
+      - uses: actions/checkout@v4
+      - uses: ./.github/workflows/modules/setup-node
+
+      - run: bun next-on-pages
