Reafactor/unused modules and fix ci (#144)

--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -20,8 +20,8 @@ jobs:
 
       - name: run Lighthouse CI
         run: |
-          npm install -g @lhci/cli
-          lhci autorun
+          bun install -g @lhci/cli
+          bun run lhci autorun
         env:
           LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
