--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "next dev",
-    "wrangler:dev": "npx @cloudflare/next-on-pages && wrangler pages dev --port 3000 .vercel/output/static --compatibility-flags=\"nodejs_compat\" --compatibility-date=2024-03-30",
+    "wrangler:dev": "bun next-on-pages && bun wrangler pages dev --port 3000",
     "prebuild": "rimraf dist && rimraf .next",
     "build": "next build",
     "start": "next start",
@@ -17,7 +17,7 @@
     "fmt:prettier": "prettier --write .",
     "test": "vitest --passWithNoTests",
     "type-check": "tsc --noEmit",
-    "find-deadcode": "ts-prune | grep -v 'used in module'"
+    "knip": "knip"
   },
   "dependencies": {
     "@acab/reset.css": "^0.10.0",
@@ -38,7 +38,6 @@
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-merge-refs": "^2.0.2",
     "use-media": "^1.4.0"
   },
   "devDependencies": {
@@ -60,7 +59,6 @@
     "@vanilla-extract/next-plugin": "^2.1.3",
     "@vanilla-extract/vite-plugin": "^3.8.0",
     "@vitejs/plugin-react": "^4.0.0",
-    "@vitest/coverage-c8": "^0.29.3",
     "autoprefixer": "^10.4.19",
     "babel-loader": "^9.0.0",
     "eslint": "^8.57.0",
@@ -70,6 +68,7 @@
     "eslint-plugin-testing-library": "^6.2.0",
     "jest-extended": "^4.0.0",
     "jsdom": "^23.0.0",
+    "knip": "^5.22.0",
     "markuplint": "^4.4.0",
     "npm-run-all": "^4.1.5",
     "postcss-dark-theme-class": "^1.2.1",
@@ -79,7 +78,6 @@
     "postcss-preset-env": "^9.5.2",
     "prettier": "^3.2.5",
     "rimraf": "^5.0.0",
-    "ts-prune": "^0.10.3",
     "typescript": "^5.4.5",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^1.6.0",
@@ -98,9 +96,6 @@
     "glob-parent": "6.0.2",
     "word-wrap": "1.2.5",
     "@typescript-eslint/typescript-estree": "7.6.0"
-  },
-  "volta": {
-    "node": "20.12.2"
   },
   "packageManager": "yarn@1.22.9+sha512.12a124451101ff12effe515057f7e1a81d4ac2a6c58ea15881aa4780d6e8cd2413566387fefa0d8dc050fe46914ad895b2f658998257178487e9bb4baf031e70"
 }
