chore: fix text

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,5 @@
     ".lighthouseci": true,
     ".next": true
   },
-  "cSpell.words": ["naporitan"]
+  "cSpell.words": ["naporitan", "valorant"]
 }
