--- a/package.json
+++ b/package.json
@@ -24,9 +24,7 @@
     "@cloudflare/next-on-pages": "^1.11.3",
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-scroll-area": "^1.0.3",
-    "@radix-ui/react-separator": "^1.0.2",
     "@radix-ui/react-toggle-group": "^1.0.3",
-    "@react-spring/web": "^9.7.3",
     "@tabler/icons-react": "^3.0.0",
     "@vanilla-extract/css": "^1.12.0",
     "@vanilla-extract/css-utils": "^0.1.3",
@@ -34,6 +32,7 @@
     "dayjs": "^1.11.11",
     "fast-xml-parser": "^4.4.0",
     "hex-rgb": "^5.0.0",
+    "motion": "^12.23.12",
     "next": "^14.1.4",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
