fix: resolve GitHub Actions failures
- Add pnpm setup to lighthouse workflow to fix global bin directory error
- Format all files with prettier to fix lint errors
- Fix formatting issues in .serena/, CLAUDE.md, and TypeScript files

--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -24,6 +24,7 @@ jobs:
 
       - name: run Lighthouse CI
         run: |
+          pnpm setup
           pnpm add -g @lhci/cli
           pnpm run lhci autorun
         env:
