--- a/.lighthouserc.json
+++ b/.lighthouserc.json
@@ -3,7 +3,7 @@
     "preset": "lighthouse:recommended",
     "collect": {
       "numberOfRuns": 1,
-      "startServerCommand": "bun run wrangler:dev",
+      "startServerCommand": "pnpm wrangler:dev",
       "url": ["http://localhost:3000"]
     },
     "upload": {
