feat: replace lighthouse setup with efficient treosh/lighthouse-ci-action
- Use treosh/lighthouse-ci-action@v12 for better reliability and performance
- Switch from wrangler:dev server to static build analysis with .next directory
- Add pull-requests write permission for PR comments
- Enable artifact uploads and temporary public storage
- Remove complex server startup configuration that was causing Chrome connection issues

--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -12,6 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
+      pull-requests: write
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}
       cancel-in-progress: true
@@ -22,9 +23,12 @@ jobs:
           persist-credentials: false
       - uses: ./.github/workflows/modules/setup-node
 
-      - name: run Lighthouse CI
-        run: |
-          npx @lhci/cli autorun
-        env:
-          LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
-          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+      - name: Build for Lighthouse
+        run: pnpm build
+
+      - name: Lighthouse CI Action
+        uses: treosh/lighthouse-ci-action@v12
+        with:
+          configPath: ./.lighthouserc.json
+          uploadArtifacts: true
+          temporaryPublicStorage: true
