chore: worker dev false

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,7 +3,7 @@ account_id = "cda8b0a2b410e1ff3a5bcc72c7e46f72"
 main = "./worker.ts"
 compatibility_date = "2024-09-23"
 compatibility_flags = ["nodejs_compat"]
-workers_dev = true
+workers_dev = false
 preview_urls = true
 
 [[rules]]
@@ -45,7 +45,7 @@ tag = "v1"
 new_sqlite_classes = ["DOQueueHandler"]
 
 [env.production.vars]
-BASE_URL = "https://www.napochaan.com"
+BASE_URL = "https://napochaan.com"
 NODE_ENV="production"
 NEXTJS_ENV="production"
 
@@ -53,7 +53,7 @@ NEXTJS_ENV="production"
 binding = "IMAGES"
 
 [[env.production.routes]]
-pattern = "www.napochaan.com"
+pattern = "napochaan.com"
 custom_domain = true
 
 [env.production.observability.logs]
